--- a/nextts-github/package.json
+++ b/nextts-github/package.json
@@ -7,11 +7,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
     "next": "10.0.3",
+    "normalize.css": "^8.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
